<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<group android:id="@+id/group_read_actions">
		<item
			android:id="@+id/action_incognito"
			android:icon="@drawable/ic_incognito"
			android:orderInCategory="10"
			android:title="@string/incognito_mode" />

		<item
			android:id="@+id/action_forget"
			android:icon="@drawable/ic_delete"
			android:orderInCategory="20"
			android:title="@string/remove_from_history" />
	</group>

	<group android:id="@+id/group_chapter_options">
		<item
			android:id="@+id/action_downloaded"
			android:checkable="true"
			android:icon="@drawable/ic_storage"
			android:orderInCategory="30"
			android:title="@string/on_device"
			app:showAsAction="never" />

		<item
			android:id="@+id/action_reversed"
			android:checkable="true"
			android:icon="@drawable/ic_revert"
			android:orderInCategory="40"
			android:title="@string/reverse_list"
			app:showAsAction="never" />

		<item
			android:id="@+id/action_grid_view"
			android:checkable="true"
			android:icon="@drawable/ic_grid"
			android:orderInCategory="50"
			android:title="@string/chapters_grid_view"
			app:showAsAction="never" />
	</group>

</menu>
